tests/build/widget_new/missing_value3.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/missing_value3.rs:7:18
   |
7  |         cursor = ;
   |                  ^- supplied 0 arguments
   |                  |
   |                  expected 1 argument
   |
note: associated function defined here
  --> $DIR/cursor_.rs:15:1
   |
15 | #[property(context)]
   | ^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
